# reai-data

./: .env.example  .env.local.example  .gitignore  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  reai.vuerd.json  requirements.txt
alembic/: env.py
config/: crawler_config.yml  logging.yml  logging_config.yml  paths.yml
dags/: financial_review_pipeline.py
docs/: airflow-continuous-load-readiness.md  backend-datamart-contract.md  backend-datamart-serving-readiness.md  local-development.md  pipeline-failure-policy.md  schema-management.md
scripts/: bootstrap_db.py  cleanse_reviews.py  crawl_reviews.py  extract_features.py  generate_embeddings.py  load_reviews.py  preprocess_reviews.py  run_pipeline.py
sql/: app_metadata_data.sql  app_service_data.sql  apps_data.sql  organizations_data.sql  schema_v2.sql  schema_v3.sql  schema_v4.sql
src/: bootstrap_db.py
tests/: conftest.py  test_airflow_dag_validation_wiring.py  test_airflow_readiness_docs.py  test_alembic_config.py  test_backend_datamart_contract.py  test_backend_datamart_serving_readiness.py  test_batch_loader.py  test_bootstrap_db.py  test_bronze_loading.py  test_ci_workflows.py  test_cleanse.py  test_cli_parsing.py  test_crawler_consistency.py  test_database_schema.py  test_enums.py  test_gold_absa_analyzer.py  test_gold_action_analyzer.py  test_gold_aggregator.py  test_gold_embedding_generator.py  test_gold_orchestrator.py  test_local_dev_setup.py  test_minio_client.py  test_parquet_schemas.py  test_parquet_writer.py  test_path_resolver.py  test_pipeline_cli_validation.py  (+4 more)
(+73 files in other folders)
