[project]
name = "reai-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.73",
    "datasets>=4.8.4",
    "emoji>=2.15.0",
    "flashtext>=2.7",
    "google-play-scraper>=1.2.7",
    "konlpy>=0.6.0",
    "nltk>=3.9.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "snorkel>=0.10.0",
    "sqlalchemy>=2.0.48",
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
